fix spacing between inputs and fields

--- a/style.css
+++ b/style.css
@@ -417,16 +417,17 @@ font-size: 1em;
 }*/
 
 .wpcf7 {
-  background: yellow;
+  /*background: yellow;*/
 }
 
 .wpcf7 p {
-  margin: 0;
+  margin-top: 30px;
 }
 
 .wpcf7 label {
   color: red;
-  /*padding: 10px;*/
+  padding: 10px;
+  margin-top: 40px;
 }
 .wpcf7 input[type="text"],
 .wpcf7 input[type="email"],
